refactor: utiliser html5-qrcode au lieu de instascanner

--- a/front/public/index.html
+++ b/front/public/index.html
@@ -9,7 +9,7 @@
       homescreen on Android. See https://developers.google.com/web/fundamentals/engage-and-retain/web-app-manifest/
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
-    <script src="%PUBLIC_URL%/instascan.min.js"></script>
+    <script src="%PUBLIC_URL%/static/js/html5-qrcode.js"></script>
     <link rel="stylesheet" href="https://lafranceinsoumise.github.io/theme/dist/theme.css" media="screen">
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
